--- a/brain-vs-brawn.cabal
+++ b/brain-vs-brawn.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -30,6 +30,7 @@ library
       Models.Piece
       Models.Player
       Moves
+      Utils.Safe
   other-modules:
       Paths_brain_vs_brawn
   hs-source-dirs:
@@ -37,6 +38,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , regex-pcre
+    , regex-posix
   default-language: Haskell2010
 
 executable brain-vs-brawn-exe
@@ -47,4 +50,6 @@ executable brain-vs-brawn-exe
   build-depends:
       base >=4.7 && <5
     , brain-vs-brawn
+    , regex-pcre
+    , regex-posix
   default-language: Haskell2010
