--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,8 @@ description: Please see the README on GitHub at <https://github.com/luxo-ai/brai
 
 dependencies:
   - base >= 4.7 && < 5
+  - regex-posix
+  - regex-pcre
 
 ghc-options:
   - -Wall
