--- a/brain-vs-brawn.cabal
+++ b/brain-vs-brawn.cabal
@@ -30,6 +30,7 @@ library
       Models.Piece
       Models.Player
       Moves
+      Utils.IO
       Utils.Safe
   other-modules:
       Paths_brain_vs_brawn
@@ -38,8 +39,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , process
     , regex-pcre
-    , regex-posix
   default-language: Haskell2010
 
 executable brain-vs-brawn-exe
@@ -50,6 +51,6 @@ executable brain-vs-brawn-exe
   build-depends:
       base >=4.7 && <5
     , brain-vs-brawn
+    , process
     , regex-pcre
-    , regex-posix
   default-language: Haskell2010
