--- a/brain-vs-brawn.cabal
+++ b/brain-vs-brawn.cabal
@@ -27,6 +27,7 @@ library
       AI
       Helpers
       Models.Board
+      Models.Error
       Models.Game
       Models.Move
       Models.Piece
@@ -40,8 +41,10 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , containers
+    , hspec
     , process
     , regex-pcre
   default-language: Haskell2010
@@ -52,9 +55,35 @@ executable brain-vs-brawn-exe
       Paths_brain_vs_brawn
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , brain-vs-brawn
     , containers
+    , hspec
+    , process
+    , regex-pcre
+  default-language: Haskell2010
+
+test-suite my-project-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      AISpec
+      Models.ErrorSpec
+      Models.GameSpec
+      Models.MoveSpec
+      Models.PieceSpec
+      Models.PlayerSpec
+      Paths_brain_vs_brawn
+  hs-source-dirs:
+      tests
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      QuickCheck
+    , base >=4.7 && <5
+    , brain-vs-brawn
+    , containers
+    , hspec
     , process
     , regex-pcre
   default-language: Haskell2010
