--- a/brain-vs-brawn.cabal
+++ b/brain-vs-brawn.cabal
@@ -25,6 +25,7 @@ source-repository head
 library
   exposed-modules:
       AI
+      Chess
       Models.Board
       Models.Error
       Models.Game
